IRtest_out/68_brainfk.err
irs/68_brainfk.ll:169:9: error: '%v173' defined with type 'i32' but expected 'i1'
  br i1 %v173, label %if_true_entry161, label %r165
        ^
1 error generated.
